--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Closures Practices</title>
     <link rel="stylesheet" href="/style.css" />
+    <!--Form validation-->
 <form>
   <label for="name">Name:</label><br>
   <input type="text" id="name" name="name"><br>
